--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
     "vue-sweetalert2": "^3.0.1",
     "vue2-google-maps": "^0.10.7"
