--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.3",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
